--- a/v0.3.0.md
+++ b/v0.3.0.md
@@ -1,1 +1,2 @@
-test
+* [Installation](https://github.com/thulab/tsfile/wiki/Installation_0.3.0)
+* [Get-Startted](https://github.com/thulab/tsfile/wiki/Get-Started_0.3.0)
